--- a/packages/backend/package.json
+++ b/packages/backend/package.json
@@ -4,7 +4,11 @@
   "main": "index.js",
   "scripts": {
     "start": "node index.js",
-    "dev": "node --watch index.js"
+    "dev": "node --watch index.js",
+    "test": "jest",
+    "test:watch": "jest --watch",
+    "test:coverage": "jest --coverage",
+    "test:concurrency": "jest --testNamePattern='concurrencia'"
   },
   "keywords": [],
   "author": "",
@@ -14,7 +18,32 @@
     "cors": "^2.8.5",
     "dotenv": "^17.2.0",
     "express": "^5.1.0",
-    "mongodb": "^6.20.0"
+    "mongodb": "^6.20.0",
+    "mongoose": "^8.19.1"
   },
-  "type": "module"
+  "devDependencies": {
+    "@babel/core": "^7.23.0",
+    "@babel/preset-env": "^7.23.0",
+    "jest": "^29.7.0",
+    "jest-html-reporters": "^3.1.5",
+    "mongodb-memory-server": "^9.1.1",
+    "supertest": "^6.3.3"
+  },
+  "type": "module",
+  "jest": {
+    "preset": "@babel/preset-env",
+    "testEnvironment": "node",
+    "transform": {
+      "^.+\\.js$": "babel-jest"
+    },
+    "testMatch": [
+      "**/__tests__/**/*.js",
+      "**/?(*.)+(spec|test).js"
+    ],
+    "collectCoverageFrom": [
+      "src/**/*.js",
+      "!src/**/*.test.js",
+      "!src/**/*.spec.js"
+    ]
+  }
 }
