--- a/packages/backend/package.json
+++ b/packages/backend/package.json
@@ -5,10 +5,10 @@
   "scripts": {
     "start": "node index.js",
     "dev": "node --watch index.js",
-    "test": "jest",
-    "test:watch": "jest --watch",
-    "test:coverage": "jest --coverage",
-    "test:concurrency": "jest --testNamePattern='concurrencia'"
+    "test": "set \"NODE_OPTIONS=--experimental-vm-modules\" && jest",
+    "test:watch": "set \"NODE_OPTIONS=--experimental-vm-modules\" && jest --watch",
+    "test:coverage": "set \"NODE_OPTIONS=--experimental-vm-modules\" && jest --coverage",
+    "test:concurrency": "set \"NODE_OPTIONS=--experimental-vm-modules\" && jest --runInBand --selectProjects Concurrencia"
   },
   "keywords": [],
   "author": "",
@@ -19,31 +19,17 @@
     "dotenv": "^17.2.0",
     "express": "^5.1.0",
     "mongodb": "^6.20.0",
-    "mongoose": "^8.19.1"
+    "mongoose": "^8.19.1",
+    "zod": "^4.1.12"
   },
   "devDependencies": {
     "@babel/core": "^7.23.0",
     "@babel/preset-env": "^7.23.0",
+    "babel-jest": "^30.2.0",
     "jest": "^29.7.0",
     "jest-html-reporters": "^3.1.5",
     "mongodb-memory-server": "^9.1.1",
-    "supertest": "^6.3.3"
+    "supertest": "^6.3.4"
   },
-  "type": "module",
-  "jest": {
-    "preset": "@babel/preset-env",
-    "testEnvironment": "node",
-    "transform": {
-      "^.+\\.js$": "babel-jest"
-    },
-    "testMatch": [
-      "**/__tests__/**/*.js",
-      "**/?(*.)+(spec|test).js"
-    ],
-    "collectCoverageFrom": [
-      "src/**/*.js",
-      "!src/**/*.test.js",
-      "!src/**/*.spec.js"
-    ]
-  }
+  "type": "module"
 }
