--- a/packages/backend/package.json
+++ b/packages/backend/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "start": "node index.js",
     "dev": "node --watch index.js",
-    "test": "set \"NODE_OPTIONS=--experimental-vm-modules\" && jest",
+    "test": "set \"NODE_OPTIONS=--experimental-vm-modules\" && jest --runInBand",
     "test:watch": "set \"NODE_OPTIONS=--experimental-vm-modules\" && jest --watch",
     "test:coverage": "set \"NODE_OPTIONS=--experimental-vm-modules\" && jest --coverage",
     "test:concurrency": "set \"NODE_OPTIONS=--experimental-vm-modules\" && jest --runInBand --selectProjects Concurrencia"
