--- a/package.json
+++ b/package.json
@@ -29,6 +29,8 @@
     "dotenv": "^17.2.2",
     "express": "^5.1.0",
     "mongodb": "6.20",
+    "swagger-jsdoc": "^6.2.8",
+    "swagger-ui-express": "^5.0.1",
     "zod": "^4.1.12"
   }
 }
