--- a/package.json
+++ b/package.json
@@ -26,9 +26,17 @@
     "prettier": "3.6.2"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^7.1.0",
+    "@fortawesome/free-brands-svg-icons": "^7.1.0",
+    "@fortawesome/free-regular-svg-icons": "^7.1.0",
+    "@fortawesome/free-solid-svg-icons": "^7.1.0",
+    "@fortawesome/react-fontawesome": "^3.1.0",
+    "bootstrap": "^5.3.8",
     "dotenv": "^17.2.2",
     "express": "^5.1.0",
     "mongodb": "6.20",
+    "react-router-dom": "^7.9.5",
+    "react-scripts": "^5.0.1",
     "swagger-jsdoc": "^6.2.8",
     "swagger-ui-express": "^5.0.1",
     "zod": "^4.1.12"
