--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "dotenv": "^17.2.2",
     "express": "^5.1.0",
     "mongodb": "6.20",
+    "react-icons": "^5.5.0",
     "react-router-dom": "^7.9.5",
     "react-scripts": "^5.0.1",
     "swagger-jsdoc": "^6.2.8",
