--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "@fortawesome/react-fontawesome": "^3.1.0",
     "@mui/icons-material": "^7.3.4",
     "@mui/material": "^7.3.4",
+    "axios": "^1.13.2",
     "bootstrap": "^5.3.8",
     "dotenv": "^17.2.2",
     "express": "^5.1.0",
