--- a/package.json
+++ b/package.json
@@ -37,7 +37,8 @@
     "@mui/material": "^7.3.4",
     "axios": "^1.13.2",
     "bootstrap": "^5.3.8",
-    "dotenv": "^17.2.2",
+    "cors": "^2.8.5",
+    "dotenv": "^17.2.3",
     "express": "^5.1.0",
     "mongodb": "6.20",
     "react-icons": "^5.5.0",
