--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,13 @@ node_modules/
 scripts/
 .claude/
 images
+
+# Environment variables
+.env
+.env.local
+.env.*.local
+packages/**/.env
+packages/**/.env.local
+
+# Keep example files
+!.env.example
